# loomi

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: checks.yml  ci.yml  release.yml
docs/: Clients.md  Logging.md  Models.md  Queries.md
loomi/: __init__.py  _logger.py  client.py  constants.py  exceptions.py
loomi/_async/: change_tracker.py  client.py  result.py  session.py  transaction.py
loomi/_driver/: _graph.py  _result.py  _session.py  _transaction.py
loomi/_internal/: _base_client.py  _base_model.py  _change_tracker.py  _types.py  base_change_tracker.py  base_client.py  base_model.py  change_tracker.py  types.py
loomi/_internal/query_builder/: delete.py  match.py  update.py
loomi/_query/: _internal_state.py  _mixin.py  _state.py
loomi/_sync/: change_tracker.py  client.py  result.py  session.py  transaction.py
loomi/_utils/: _awaitable.py
loomi/client/: __init__.py  _base.py  async_client.py  sync_client.py
loomi/client/_internal/: _base.py  _change_tracker.py  _tracker.py  result.py  session.py  transaction.py
loomi/clients/: _base.py  async_client.py  sync_client.py
loomi/constants/: _graph.py  constraints.py  index.py
loomi/fields/: annotations.py
loomi/graph/: __init__.py  _indexes.py  annotations.py  constraints.py  data_types.py  graph.py  node.py  path.py  relationship.py
loomi/migrations/: _comparer.py  _schema.py  actions.py  cli.py  settings.py
loomi/models/: __init__.py  _base.py  annotations.py  base.py  graph.py  node.py  path.py  relationship.py
loomi/models/_internal/: _base.py  _types.py
loomi/queries/: alias.py  builder.py
loomi/queries/_internal/: _mixins.py  _state.py
loomi/query/: __init__.py  _builder.py  _context.py  _internal_state.py  _mixin.py  _protocols.py  _state.py  _templates.py  alias.py  constants.py  db_function.py  descriptor.py  descriptors.py  expressions.py  filters.py  functions.py  helpers.py  property_descriptor.py  transformers.py
loomi/query/_internal/: _expression.py  _property_descriptor.py  _types.py
loomi/query/functions/: __init__.py  arithmetic.py  collection.py  comparison.py  identity.py  transformation.py
tests/: __init__.py
tests/async/: test_async_change_tracker.py  test_async_client.py  test_async_result.py
tests/client/: test_async_client.py  test_change_tracker.py  test_client_base.py  test_sync_change_tracker.py  test_sync_client.py
tests/client/async/: test_async_change_tracker.py  test_async_client.py  test_async_result.py  test_async_session.py  test_async_transaction.py
tests/client/sync/: test_sync_change_tracker.py  test_sync_client.py  test_sync_result.py  test_sync_session.py  test_sync_transaction.py
tests/fixtures/: db.py
tests/graph/: test_annotations.py  test_data_types.py  test_node.py  test_relationship.py
tests/integration/client/: test_client_base.py
tests/integration/client/async/: test_async_change_tracker.py  test_async_client.py  test_async_result.py  test_async_session.py  (+1 more)
tests/internal/: test_base_change_tracker.py  test_base_client.py  test_base_model.py  test_change_tracker.py
tests/internal/models/: model_one.py  non_model_one.py
tests/models/: test_base.py  test_model_base.py  test_node.py  test_relationship.py
tests/query/: test_alias.py  test_descriptor.py  test_expressions.py
tests/query/functions/: test_arithmetic.py  test_collection.py  test_comparison.py  test_identity.py  test_transformation.py
tests/sync/: test_sync_change_tracker.py  test_sync_client.py  test_sync_result.py
tests/unit/client/: test_change_tracker.py
tests/unit/models/: test_model_base.py  test_node.py  test_relationship.py
(+7 files in other folders)
