[project]
name = "loomi"
version = "0.1.0"
description = ""
authors = [{ name = "Marc Troisner", email = "marc.troisner@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pydantic (>=2.12.5,<3.0.0)"]

[tool.poetry]
packages = [{ include = "loomi" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyright (>=1.1.407,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
]
