[project]
name = "loomi"
version = "0.1.0"
description = ""
authors = [{ name = "Marc Troisner", email = "marc.troisner@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pydantic (>=2.12.5,<3.0.0)", "neo4j (>=6.0.3,<7.0.0)", "xxhash (>=3.6.0,<4.0.0)"]

[tool.poetry]
packages = [{ include = "loomi" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyright (>=1.1.407,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-dotenv (>=0.5.2,<0.6.0)",
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=loomi --cov-report=term-missing"
env_files = [".env.test"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
